--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Miniconda3\\envs\\django2\\python.exe"
+    "python.pythonPath": "/Users/desarrollo/miniconda3/envs/django2/bin/python"
 }
